# jj-status-parser

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake-ci.toml  flake.nix  foo
.github/: settings.yml
src/: lib.rs  main.rs
tests/cmd/: simple.stdin  simple.stdout  simple.toml
