[package]
name = "jj-status-parser"
description = "TODO"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/jj-status-parser"
repository = "https://github.com/adam-gaia/jj-status-parser"
include = ["src/**/*", "LICENSE-*", "README.md"]
authors = ["Adam Gaia <git@agaia.dev>"]

[[bin]]
name = "jj-status-parser"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
diff = "0.1.13"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
winnow = "0.7.10"
winnow-parse-error = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
trycmd = "0.15.9"
